@@ -1,12 +1,12 @@
 #!/usr/bin/env perl
-# @(#)Ident: yakuake_session_tt_cd 2013-06-21 13:34 pjf ;
+# @(#)Ident: yakuake_session_tt_cd 2013-06-30 02:05 pjf ;
 # Called from the alias for the cd shell builtin
 # Since its called each time you cd it must be small and fast
 
 use strict;
 use warnings;
 
-our $VERSION = '0.1';
+our $VERSION = '0.6';
 
 use Cwd                   qw( getcwd );
 use File::Spec::Functions qw( catdir catfile );
